fix layout shift bug

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -20,4 +20,5 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding-left: calc(100vw - 100%);
 }
